--- a/orders-demo-ui/pom.xml
+++ b/orders-demo-ui/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>orders-demo</artifactId>
+	<artifactId>orders-demo-ui</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>orders-demo</name>
 	<description>Demo project for Spring Boot</description>
